--- a/uart_int/Makefile
+++ b/uart_int/Makefile
@@ -16,7 +16,7 @@ SRC        := src
 
 # Source files.
 SRCFILES  = ${SRC}/main.c
-SRCFILES += ${SRC}/usart.c
+SRCFILES += ${SRC}/uart_int.c
 SRCFILES += ${SRC}/led.c
 SRCFILES += ${RTOS}/heap_3.c
 SRCFILES += ${RTOS}/list.c
