Combined UART and DMA files.

--- a/uart_dma/Makefile
+++ b/uart_dma/Makefile
@@ -16,8 +16,7 @@ SRC        := src
 
 # Source files.
 SRCFILES  = ${SRC}/main.c
-SRCFILES += ${SRC}/uart.c
-SRCFILES += ${SRC}/dma.c
+SRCFILES += ${SRC}/uart_dma.c
 SRCFILES += ${SRC}/led.c
 SRCFILES += ${RTOS}/heap_3.c
 SRCFILES += ${RTOS}/list.c
