--- a/uart_dma/Makefile
+++ b/uart_dma/Makefile
@@ -18,6 +18,7 @@ SRC        := src
 SRCFILES  = ${SRC}/main.c
 SRCFILES += ${SRC}/uart_dma.c
 SRCFILES += ${SRC}/led.c
+SRCFILES += ${SRC}/ring_buffer.c
 SRCFILES += ${RTOS}/heap_3.c
 SRCFILES += ${RTOS}/list.c
 SRCFILES += ${RTOS}/port.c
