Working I2C and display.

--- a/i2c/Makefile
+++ b/i2c/Makefile
@@ -18,7 +18,7 @@ LINKERSCRIPT := ldscript
 # Source files.
 SRCFILES  = ${SRC}/main.c
 SRCFILES += ${SRC}/i2c.c
-# SRCFILES += ${SRC}/display.c
+SRCFILES += ${SRC}/display.c
 SRCFILES += ${SRC}/led.c
 SRCFILES += ${RTOS}/heap_3.c
 SRCFILES += ${RTOS}/list.c
