--- a/uart_dma/Makefile
+++ b/uart_dma/Makefile
@@ -14,13 +14,13 @@ LINKERSCRIPT := ldscript
 SRC          := src
 RTOS         := ../middleware/FreeRTOS
 LIBOPENCM3   := ../libopencm3
-BLUEPILL     := ../bluepill
+BSP          := ../bsp
 MISC         := ../middleware
 
 # Source files.
 SRCFILES  = ${SRC}/main.c
-SRCFILES += ${BLUEPILL}/bluepill.c
-SRCFILES += ${BLUEPILL}/uart_dma.c
+SRCFILES += ${BSP}/bsp.c
+SRCFILES += ${BSP}/uart_dma.c
 SRCFILES += ${RTOS}/heap_3.c
 SRCFILES += ${RTOS}/list.c
 SRCFILES += ${RTOS}/port.c
@@ -88,7 +88,7 @@ TGT_CPPFLAGS += -I.
 TGT_CPPFLAGS += -I./${SRC}
 TGT_CPPFLAGS += -I./${RTOS}
 TGT_CPPFLAGS += -I./$(LIBOPENCM3)/include
-TGT_CPPFLAGS += -I./${BLUEPILL}
+TGT_CPPFLAGS += -I./${BSP}
 TGT_CPPFLAGS += -I./${MISC}
 TGT_CPPFLAGS += -I./include
 
